1st attempt fixing footer animation alignment for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -970,6 +970,8 @@ body {
   align-items: center;
   border: 0;
   padding: 40px 0 60px;
+  width: 200px;
+  margin: 0 auto;
 }
 
 .footer-col1-text1 {
