--- a/css/responsive.css
+++ b/css/responsive.css
@@ -556,6 +556,7 @@
 
   .footer-col1 {
     padding-top: 5px;
+    margin: 0;
   }
 
   .footer-col1-text1 {
